--- a/style/style.css
+++ b/style/style.css
@@ -98,12 +98,16 @@ body {
     margin: 0.3em;
   }
   .navContainer .title {
-    font-size: 1em;
+    font-size: 0.8em;
   }
   .navContainer .color {
-    font-size: 2em;
+    font-size: 1.8em;
   }
   .gussContainer {
-    font-size: 0.65em;
+    font-size: 0.5em;
+  }
+  .cardContainer {
+    height: 80vh;
+    padding: 2em 0;
   }
 }
