--- a/style/style.css
+++ b/style/style.css
@@ -20,10 +20,14 @@ body {
   font-size: 2em;
   font-weight: 500;
   margin-bottom: 0.7em;
+  width: 100%;
+  text-align: center;
 }
 .navContainer .color {
   font-size: 3.5em;
   font-weight: 500;
+  width: 100%;
+  text-align: center;
 }
 .gussContainer {
   background-color: #fff;
@@ -35,7 +39,7 @@ body {
 }
 .gussContainer .changeColor {
   cursor: pointer;
-  padding: 1em;
+  padding: 1em 0;
   transition: 0.5s;
 }
 .gussContainer .changeColor:hover {
@@ -43,10 +47,10 @@ body {
   background-color: #2c8e99;
 }
 .gussContainer .result {
-  padding: 1em;
+  padding: 1em 0;
 }
 .gussContainer .gusse {
-  padding: 1em;
+  padding: 1em 0;
   display: flex;
 }
 .cardContainer {
@@ -89,6 +93,9 @@ body {
   }
 }
 @media only screen and (max-width: 500px) {
+  .navContainer {
+    padding: 3em 0;
+  }
   .cardContainer .cardBox {
     width: 100%;
   }
@@ -107,7 +114,7 @@ body {
     font-size: 0.5em;
   }
   .cardContainer {
-    height: 80vh;
+    min-height: 80vh;
     padding: 2em 0;
   }
 }
