fix bug of mobile style

--- a/style/style.css
+++ b/style/style.css
@@ -111,10 +111,11 @@ body {
     font-size: 1.8em;
   }
   .gussContainer {
+    justify-content: space-around;
     font-size: 0.5em;
   }
   .cardContainer {
-    min-height: 80vh;
+    min-height: 75vh;
     padding: 2em 0;
   }
 }
